fixed details buttons from getting cut off

--- a/TxFApp/static/css/customstyles.css
+++ b/TxFApp/static/css/customstyles.css
@@ -184,3 +184,7 @@ body {
   padding-top: 16px;
   padding-bottom: 16px;
 }
+
+.btn-lg {
+  margin-top: 5px;
+}
